--- a/src/index.css
+++ b/src/index.css
@@ -57,17 +57,16 @@ h1 {
 
 button {
   border-radius: 8px;
-  border: 1px solid transparent;
   padding: 0.6em 1.2em;
-  font-size: 1em;
+  font-size: 1.5rem;
   font-weight: 500;
   font-family: inherit;
   background-color: #1a1a1a;
   cursor: pointer;
-  transition: border-color 0.25s;
+  transition: background-color 0.2s ease-in-out;
 }
 button:hover {
-  border-color: #f9f9f9;
+  background-color: #616161;
 }
 button:focus,
 button:focus-visible {
